added changing colors with pywal

--- a/main.less
+++ b/main.less
@@ -8,9 +8,10 @@
 @grey: #7c9fa6;
 
 @import url('https://fonts.googleapis.com/css?family=Pacifico|Roboto');
+@import url('file:///home/menrva/.cache/wal/colors.css');
 
 body {
-	background-color: @background-blue;
+	background-color: darken(var(--color1));
 	font-family: 'Roboto', sans-serif;
 
 	height: auto;
